Add Oracle Free module, to be used as the main Oracle Database (#535)
* Add Oracle Free module

* Add Oracle Free Reactive module

* Add Oracle Free R2DBC module

* Fix docs

* Fix tests

* Fix binary checks